# opendock-optimum

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  FEATURES.md  JIRA_FEATURE_PARITY_CHECKLIST.md  KANBAN_ROADMAP.md  README.md  bun.lockb  opendock_codex_spec.txt  package-lock.json  package.json  pnpm-lock.yaml
apps/backend-rs/: .env.example  Cargo.toml
apps/backend-rs/data/: opendock.db
apps/backend-rs/migrations/: 001_initial.sql  20260417000001_users.sql  20260417010000_notes.sql  20260417020000_boards.sql  20260417030000_note_members.sql  20260420000001_entity_links.sql
apps/backend-rs/src/: app.md  app.rs  config.md  config.rs  error.md  error.rs  main.md  main.rs  mention.rs  state.rs
apps/backend-rs/src/auth/: extract.rs  mod.rs  verify.rs
apps/backend-rs/src/db/: activities.md  activities.rs  attachments.md  attachments.rs  auth.md  auth.rs  board.rs  board_members.rs  boards.md  boards.rs  calendar_events.md  calendar_events.rs  card.rs  collections.md  collections.rs  column.rs  columns.md  columns.rs  comments.md  comments.rs  entity_link.rs  file_folders.md  file_folders.rs  file_items.md  file_items.rs  folders.md  folders.rs  kanban_users.md  kanban_users.rs  labels.md  labels.rs  mod.md  mod.rs  note.rs  note_member.rs  notes.md  notes.rs  sprints.md  sprints.rs  tickets.md  (+4 more)
apps/backend-rs/src/dto/: auth.md  auth.rs  board.md  board.rs  calendar_event.md  calendar_event.rs  collection.md  collection.rs  column.md  column.rs  entity_link.rs  file_item.md  file_item.rs  folder.md  folder.rs  label.md  label.rs  mod.md  mod.rs  note.md  note.rs  ticket.md  ticket.rs  time_log.md  time_log.rs
apps/backend-rs/src/extractors/: auth_user.md  auth_user.rs  mod.md  validated_json.md  validated_json.rs
apps/backend-rs/src/handlers/: attachments.md  attachments.rs  auth.md  auth.rs  boards.md  boards.rs  (+23 more)
(+681 files in other folders)
