[package]
name = "opendock-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.19", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
